--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ build/Release/
 
 # Instrumented libs
 lib-cov/
+
+# User-created prompts (exclude user customizations but keep examples)
+user-prompts/*.json
+!user-prompts/test-case-review.json
+!user-prompts/sprint-test-summary.json
+!user-prompts/test-plan-analysis.json
