--- a/package.json
+++ b/package.json
@@ -14,23 +14,29 @@
     "create-prompt": "node scripts/create-user-prompt.js",
     "prompt-examples": "node scripts/create-user-prompt.js --examples"
   },
-  "keywords": ["mcp", "testrail", "testing", "api"],
-  "author": "TestRail MCP Server",
+  "keywords": [
+    "mcp",
+    "testrail",
+    "testing",
+    "api"
+  ],
+  "author": "S.Kindyk",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.4.0",
-    "axios": "^1.6.0"
+    "@modelcontextprotocol/sdk": "^1.17.2",
+    "axios": "^1.6.0",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0",
-    "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
-    "eslint": "^8.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "prettier": "^3.0.0"
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.4",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=18.0.0"
